--- a/jupyter/notebook/preprocess/shape/resample.ipynb
+++ b/jupyter/notebook/preprocess/shape/resample.ipynb
@@ -19,6 +19,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "841a8091-6ec4-4f42-96db-41fc168e51bc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from util.preprocess.handle_session_data import convert_jst_to_utc, load_meta_data, get_session_data"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "ca3276eb-3db9-41c3-ae61-e2ea238a91f5",
    "metadata": {},
@@ -28,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "48ab9cac-b2d1-4158-9a5e-f3e45d8ea271",
    "metadata": {},
    "outputs": [],
@@ -39,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "46b7480a-3c6f-4ddd-a0fc-ee416bef8816",
    "metadata": {},
    "outputs": [],
@@ -49,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "cbf2388a-8580-4d73-9c0b-0960dd624bc1",
    "metadata": {},
    "outputs": [],
@@ -59,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "22afd9a7-dd67-4453-9d31-b75d55d202f5",
    "metadata": {},
    "outputs": [
@@ -195,7 +205,7 @@
        "11  session_20240926_181815     514B  2024-09-26 18:19:00  2024-09-26 18:24:00"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -206,57 +216,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "c849fec5-669a-4b74-9d24-c949a4e8c2cd",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def convert_jst_to_utc(jst_time_str):\n",
-    "    jst_offset = timedelta(hours=9)\n",
-    "    jst_time = datetime.strptime(jst_time_str, '%Y-%m-%d %H:%M:%S')\n",
-    "    utc_time = jst_time - jst_offset\n",
-    "    return utc_time\n",
-    "\n",
-    "def load_meta_data(file_path):\n",
-    "    df = pd.read_csv(file_path)\n",
-    "    df['timestamp'] = pd.to_datetime(df['timestamp'], unit='s')\n",
-    "    return df\n",
-    "\n",
-    "def get_session_data(session_df, session_id):\n",
-    "    selected_row = session_df.loc[session_df['session_id'] == session_id]\n",
-    "    location = selected_row['location'].values[0]\n",
-    "    start_time_jst = selected_row['start_time_JST'].values[0]\n",
-    "    end_time_jst = selected_row['end_time_JST'].values[0]\n",
-    "    return location, start_time_jst, end_time_jst\n",
-    "\n",
-    "def load_session_image_meta_data(session_id, session_df, raw_data_dirpath):\n",
-    "    # セッションデータ取得\n",
-    "    location, start_time_jst_str, end_time_jst_str = get_session_data(session_df, session_id)\n",
-    "    \n",
-    "    # JST -> UTC変換\n",
-    "    start_time_utc = convert_jst_to_utc(start_time_jst_str)\n",
-    "    end_time_utc = convert_jst_to_utc(end_time_jst_str)\n",
-    "\n",
-    "    print(f\"Location: {location}, Start Time: {start_time_utc}, End Time: {end_time_utc}\")\n",
-    "\n",
-    "    # ファイルパス設定\n",
-    "    session_dirpath = raw_data_dirpath / location / session_id / 'camera0'\n",
-    "    meta_data_filepath = session_dirpath / 'meta_data.csv'\n",
-    "\n",
-    "    # メタデータ読み込み\n",
-    "    df = load_meta_data(meta_data_filepath)\n",
-    "\n",
-    "    return df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "id": "6db5b524-f4e2-40a4-a2c2-3aa41df6683c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def resample(meta_data_df, start_time, end_time):\n",
+    "def resample(meta_data_df, start_time, end_time, fps):\n",
     "    # pd.date_rangeではendが含まれるので、1フレーム分の時間を引く\n",
     "    new_timestamps = pd.date_range(start=start_time, end=end_time-pd.Timedelta(milliseconds=int(1000 / fps)), freq=f'{int(1000 / fps)}ms')\n",
     "    new_df = pd.DataFrame(new_timestamps, columns=['timestamp'])\n",
@@ -267,17 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "a7a41cf9-1a09-46d9-88cd-61de47493dd0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fps = 10"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "97a84f17-7f2c-47ae-93da-c4f7fa0ed19b",
    "metadata": {},
    "outputs": [
@@ -301,6 +256,8 @@
     }
    ],
    "source": [
+    "fps = 10\n",
+    "\n",
     "# 各locationごとに保存するための辞書を用意します\n",
     "location_dfs = {}\n",
     "\n",
@@ -321,7 +278,7 @@
     "    meta_data_df = load_meta_data(meta_data_filepath)\n",
     "\n",
     "    # リサンプリング\n",
-    "    resampled_df = resample(meta_data_df, start_time_utc, end_time_utc)\n",
+    "    resampled_df = resample(meta_data_df, start_time_utc, end_time_utc, fps)\n",
     "\n",
     "    resampled_df['location'] = location\n",
     "    resampled_df['session_id'] = session_id\n",
@@ -341,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "dde37ef1-2b45-4fff-8dd7-b88f45557d59",
    "metadata": {},
    "outputs": [
@@ -510,7 +467,7 @@
        "[12000 rows x 5 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -521,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "582482e9-174e-4e71-9133-20f3764e1482",
    "metadata": {},
    "outputs": [
@@ -690,7 +647,7 @@
        "[12000 rows x 5 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -701,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "0f3b0faf-4350-4833-b3f3-0286d4695cab",
    "metadata": {},
    "outputs": [
@@ -870,7 +827,7 @@
        "[12000 rows x 5 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -889,7 +846,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "d1c92ee0-fb71-4109-85d6-a6896cfbb455",
    "metadata": {},
    "outputs": [],
@@ -914,22 +871,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "1eee3f73-ea2f-4c5c-a2d5-a00d967c5718",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Number of images successfully loaded: 12000\n",
-      "Number of images successfully loaded: 12000\n",
-      "Number of images successfully loaded: 12000\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "resampled_dirpath = root_data_dirpath / 'preprocessed' / 'resampled'\n",
+    "resampled_dirpath = root_data_dirpath / 'preprocessed' / 'shape' / 'resampled'\n",
     "for df, location in zip([df_512, df_511, df_514B], ['512', '511', '514B']):\n",
     "    images = load_images_to_numpy(df, raw_data_dirpath)\n",
     "    save_filepath = resampled_dirpath / f'images_{location}_resampled.npy'\n",
