--- a/jupyter/notebook/training/trial.ipynb
+++ b/jupyter/notebook/training/trial.ipynb
@@ -2,8 +2,178 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "70f800f8-0815-4343-b380-81c89163d3c2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "1c52ce86-a3d0-4650-8d89-6c9b457c5f85",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024-10-28 12:31:23.489222: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 AVX512F AVX512_VNNI FMA\n",
+      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
+      "2024-10-28 12:31:23.645854: I tensorflow/core/util/port.cc:104] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "from datetime import datetime\n",
+    "from dataclasses import dataclass\n",
+    "from typing import Callable, List\n",
+    "\n",
+    "import numpy as np\n",
+    "import tensorflow as tf\n",
+    "from tensorflow.keras.losses import BinaryCrossentropy\n",
+    "from tensorflow.keras.optimizers import Adam\n",
+    "from tensorflow.keras.callbacks import TensorBoard"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "435227d2-109e-4033-962b-1dcca0d07b4a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from models.handnet_based_model import handnet_based_model\n",
+    "from util.training import init_device"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "cdf10cbe-28cd-4778-acf5-adf4e2cbe1fb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TensorFlow version: 2.11.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"TensorFlow version:\", tf.__version__)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b7598609-039b-4eb1-81b8-ab5ca659260d",
+   "metadata": {},
+   "source": [
+    "# 準備\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3f829dc1-0e66-412b-b7c2-05fbe9b37b56",
+   "metadata": {},
+   "source": [
+    "## デバイスの初期化"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "3d4ca793-58bd-4042-840f-a8a994d74690",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mon Oct 28 12:39:28 2024       \n",
+      "+-----------------------------------------------------------------------------+\n",
+      "| NVIDIA-SMI 470.74       Driver Version: 470.74       CUDA Version: 11.4     |\n",
+      "|-------------------------------+----------------------+----------------------+\n",
+      "| GPU  Name        Persistence-M| Bus-Id        Disp.A | Volatile Uncorr. ECC |\n",
+      "| Fan  Temp  Perf  Pwr:Usage/Cap|         Memory-Usage | GPU-Util  Compute M. |\n",
+      "|                               |                      |               MIG M. |\n",
+      "|===============================+======================+======================|\n",
+      "|   0  NVIDIA RTX A6000    On   | 00000000:18:00.0 Off |                  Off |\n",
+      "| 30%   29C    P8    24W / 300W |  48061MiB / 48682MiB |      0%      Default |\n",
+      "|                               |                      |                  N/A |\n",
+      "+-------------------------------+----------------------+----------------------+\n",
+      "|   1  NVIDIA RTX A6000    On   | 00000000:3B:00.0 Off |                  Off |\n",
+      "| 30%   37C    P8    19W / 300W |  48063MiB / 48685MiB |      0%      Default |\n",
+      "|                               |                      |                  N/A |\n",
+      "+-------------------------------+----------------------+----------------------+\n",
+      "|   2  NVIDIA RTX A6000    On   | 00000000:5E:00.0 Off |                  Off |\n",
+      "| 42%   71C    P2   220W / 300W |   5129MiB / 48685MiB |     76%      Default |\n",
+      "|                               |                      |                  N/A |\n",
+      "+-------------------------------+----------------------+----------------------+\n",
+      "|   3  NVIDIA RTX A6000    On   | 00000000:86:00.0 Off |                  Off |\n",
+      "| 41%   68C    P2   197W / 300W |   3853MiB / 48685MiB |     63%      Default |\n",
+      "|                               |                      |                  N/A |\n",
+      "+-------------------------------+----------------------+----------------------+\n",
+      "|   4  NVIDIA RTX A6000    On   | 00000000:D8:00.0 Off |                  Off |\n",
+      "| 36%   63C    P2   185W / 300W |   2760MiB / 48685MiB |     59%      Default |\n",
+      "|                               |                      |                  N/A |\n",
+      "+-------------------------------+----------------------+----------------------+\n",
+      "                                                                               \n",
+      "+-----------------------------------------------------------------------------+\n",
+      "| Processes:                                                                  |\n",
+      "|  GPU   GI   CI        PID   Type   Process name                  GPU Memory |\n",
+      "|        ID   ID                                                   Usage      |\n",
+      "|=============================================================================|\n",
+      "+-----------------------------------------------------------------------------+\n"
+     ]
+    }
+   ],
+   "source": [
+    "!nvidia-smi"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "604eb57a-efe0-4c1a-bb8b-e0f752e4ea90",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 使用するGPUを指定\n",
+    "gpu = [2, 3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "116fef91-3836-46ad-8c74-24b7064dc5d1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Visible GPU devices:\n",
+      "PhysicalDevice(name='/physical_device:GPU:2', device_type='GPU')\n",
+      "PhysicalDevice(name='/physical_device:GPU:3', device_type='GPU')\n"
+     ]
+    }
+   ],
+   "source": [
+    "seed = 42\n",
+    "init_device(seed, gpu)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4ba49463-6c62-443b-bce3-3c6dd61de2f3",
    "metadata": {},
    "outputs": [],
    "source": []
