--- a/jupyter/notebook/preprocess/csi/observation_amp_and_phase.ipynb
+++ b/jupyter/notebook/preprocess/csi/observation_amp_and_phase.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 102,
    "id": "0b46f759-1df6-4c43-8ec5-b955a4eda4d8",
    "metadata": {},
    "outputs": [],
@@ -20,13 +20,13 @@
     "\n",
     "from util.plot.heatmap import plot_csi\n",
     "from util.preprocess.csi.denoising import hampel_filter\n",
-    "from util.preprocess.csi.normalize import normalize_csi_amplitudes_by_frame_power\n",
+    "from util.preprocess.csi.normalize import normalize_csi_amplitudes_by_frame_power, normalize_csi_amplitudes_by_frame_mean\n",
     "from util.preprocess.csi.phase import remove_timing_offset"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 103,
    "id": "04f87084-9c44-4131-a053-143b4cab7953",
    "metadata": {},
    "outputs": [],
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 110,
    "id": "3c347948-f610-4e01-b787-8afb4ede32fb",
    "metadata": {},
    "outputs": [],
@@ -48,6 +48,7 @@
     "def amp_preprocess(amp):\n",
     "    # Filtering\n",
     "    amp = hampel_filter(amp, window_size=200, n_sigmas=3)\n",
+    "    amp = normalize_csi_amplitudes_by_frame_mean(amp)\n",
     "\n",
     "    return amp\n",
     "\n",
@@ -57,14 +58,14 @@
     "    # Remove Timing Offset\n",
     "    phase = remove_timing_offset(phase)\n",
     "    # Filtering\n",
-    "    phase_filtered = hampel_filter(phase, window_size=200, n_sigmas=3)\n",
+    "    phase_filtered = hampel_filter(phase, window_size=100, n_sigmas=3)\n",
     "\n",
     "    return phase"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 111,
    "id": "c0535a3f-3cc4-4b1e-9668-5f3f743251f3",
    "metadata": {},
    "outputs": [],
@@ -77,19 +78,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 112,
    "id": "b3fbfce7-7426-4610-af08-0b504764277c",
    "metadata": {},
    "outputs": [],
    "source": [
     "root_data_dirpath = Path('/tf/workspace/deformation-prediction-multi-environment/data')\n",
     "resampled_data_dirpath = root_data_dirpath / 'preprocessed' / 'csi' / 'resampled'\n",
-    "save_dirpath = root_data_dirpath / 'preprocessed' / 'csi' / 'amp_and_phase_no_norm'"
+    "save_dirpath = root_data_dirpath / 'preprocessed' / 'csi' / 'amp_and_phase_mean_norm'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 113,
    "id": "0c181c00-bf85-4066-bac4-122f168b7389",
    "metadata": {},
    "outputs": [],
@@ -100,14 +101,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 114,
    "id": "937e9a04-c46b-4ed4-ae88-1ba585c30012",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "228e9518ebf34dd2bf9d015ab19cb57b",
+       "model_id": "0e43112ec5d1438a8bdb91e69febee3a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -131,7 +132,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fbc33d49e40548d3b2b8458dfcd9534a",
+       "model_id": "fab939795e094a01af99e4ea2b8760c6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -155,7 +156,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6884a94b00d749f4804f20d42b1a294f",
+       "model_id": "f4bce6a47f6044da8a3f7253790db84e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -179,7 +180,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8ad83cf875e345b89a448c74f7d8c7d1",
+       "model_id": "388e462b80634217a2280532c8a5ee41",
        "version_major": 2,
        "version_minor": 0
       },
@@ -203,7 +204,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "048596fbdd9a425c92bec8f112054f85",
+       "model_id": "a3285f945d71408295252a0627447dcf",
        "version_major": 2,
        "version_minor": 0
       },
@@ -227,7 +228,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b6e0d78890ae47d0b090a91ca1474a26",
+       "model_id": "e230548977814ffeb2190a308bac8db6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -251,7 +252,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c3a09f0712374239996120e868918178",
+       "model_id": "a29bc304526042108c8c36ae64a8ef99",
        "version_major": 2,
        "version_minor": 0
       },
@@ -275,7 +276,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d225ef68b6904b91b725c55ae28357df",
+       "model_id": "d4165932afec4399b887f95257186f61",
        "version_major": 2,
        "version_minor": 0
       },
@@ -306,7 +307,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "40b05f18dfd544b790cb22fdffff8266",
+       "model_id": "a1c2ec5d0b0e46e0abbf6f06cd613d23",
        "version_major": 2,
        "version_minor": 0
       },
@@ -330,7 +331,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9f1e3494ca3a4e369a533b9591fb1ff3",
+       "model_id": "4ea31ced26b34b948bc1bb6ebb81ccf6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -340,6 +341,366 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"></pre>\n"
+      ],
+      "text/plain": []
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "de0fd14979ac4794ab63c42de5906179",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"></pre>\n"
+      ],
+      "text/plain": []
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "1e62b05639cf43cf9052f8b1c97baa68",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"></pre>\n"
+      ],
+      "text/plain": []
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "5cc890be24b3462d84f8cca4c60a02f5",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"></pre>\n"
+      ],
+      "text/plain": []
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "89f5742105834228a56538640f713ce5",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"></pre>\n"
+      ],
+      "text/plain": []
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "cc320ee688424da391e9119a30d144b9",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"></pre>\n"
+      ],
+      "text/plain": []
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f9d3e95f4df84b12bf2c4e36e415732e",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"></pre>\n"
+      ],
+      "text/plain": []
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(12000, 10, 52, 2)\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "90dce58661f944b1a58e12c888145f3d",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"></pre>\n"
+      ],
+      "text/plain": []
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "69dda2d6e1394e1c9a0cad3a49427e98",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"></pre>\n"
+      ],
+      "text/plain": []
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c3f968e7119249a3b5af7a22379df353",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"></pre>\n"
+      ],
+      "text/plain": []
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "3eca46d847a94a88826dad8d66a3ba29",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"></pre>\n"
+      ],
+      "text/plain": []
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "7e9593c562cb4c7984b2b1fdf3186b7a",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"></pre>\n"
+      ],
+      "text/plain": []
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f395b32e52254ceead7493901a19cdeb",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"></pre>\n"
+      ],
+      "text/plain": []
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "13d3c745a9c44aafbe7ec57528e4cfb2",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"></pre>\n"
+      ],
+      "text/plain": []
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "31868ce884e84232a822cabbce27d3a3",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"></pre>\n"
+      ],
+      "text/plain": []
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(12000, 10, 52, 2)\n"
+     ]
     }
    ],
    "source": [
